--- a/Background.html
+++ b/Background.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Sinclair Wash 2019</title>
+  <title>Sinclair Wash - Project Info</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      </div>
+      <a class="btn btn-link btn-lg" href="I:\CENE 476\Sinclair Wash\index.HTML">HOME</a>
+        <a href="\CENE 476\Sinclair Wash\index.html">
+        </a>
+    </div>
   </nav>
 
   <!-- Masthead -->
@@ -37,7 +40,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Sinclair Wash</h1>
+          <h1 class="mb-5">Project Info</h1>
               </div>
             </div>
           </form>
@@ -46,47 +49,6 @@
     </div>
   </header>
 
-  <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\Background.html">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
-              </a>
-            </div>
-            <h3>Project Information</h3>
-            <p class="lead mb-0">Maps depicting location of project.</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
-              <i class="icon-layers m-auto text-primary"></i>
-            </a>
-            </div>
-            <h3>Constraints</h3>
-            <p class="lead mb-0">Information about constraints of the project.</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
-              <i class="icon-check m-auto text-primary"></i>
-            </a>
-            </div>
-            <h3>Tasks</h3>
-            <p class="lead mb-0">Information about project tasks.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
@@ -94,8 +56,8 @@
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Fully Responsive Design</h2>
-          <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+          <h2>Project Location</h2>
+          <p class="lead mb-0">The project is located in the City of Flagstaff. The stretch of Sinclair Wash that is to be the focus of the project is the stretch from the I-17 to Lone Tree Road.</p>
         </div>
       </div>
       <div class="row no-gutters">
