--- a/startbootstrap-landing-page-master/index.html
+++ b/startbootstrap-landing-page-master/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Sinclair Wash 2019</title>
+  <title>Landing Page - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      </div>
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="btn btn-primary" href="#">Sign In</a>
+    </div>
   </nav>
 
   <!-- Masthead -->
@@ -37,7 +39,16 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Sinclair Wash</h1>
+          <h1 class="mb-5">test o</h1>
+        </div>
+        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+          <form>
+            <div class="form-row">
+              <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+              </div>
+              <div class="col-12 col-md-3">
+                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
               </div>
             </div>
           </form>
@@ -53,34 +64,28 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\Background.html">
               <i class="icon-screen-desktop m-auto text-primary"></i>
-              </a>
             </div>
-            <h3>Project Information</h3>
-            <p class="lead mb-0">Maps depicting location of project.</p>
+            <h3>Proposal</h3>
+            <p class="lead mb-0">Took great on any device, no matter the size!</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
               <i class="icon-layers m-auto text-primary"></i>
-            </a>
             </div>
-            <h3>Constraints</h3>
-            <p class="lead mb-0">Information about constraints of the project.</p>
+            <h3>Bootstrap 4 Ready</h3>
+            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
               <i class="icon-check m-auto text-primary"></i>
-            </a>
             </div>
-            <h3>Tasks</h3>
-            <p class="lead mb-0">Information about project tasks.</p>
+            <h3>Easy to Use</h3>
+            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
           </div>
         </div>
       </div>
@@ -191,7 +196,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">&copy; Sinclair Wash 2019. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2019. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
