--- a/Tasks.html
+++ b/Tasks.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Sinclair Wash 2019</title>
+  <title>Landing Page - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      </div>
+      <a class="navbar-brand" href="#">Sinclair Wash</a>
+      <a class="btn btn-primary" href="#">Sign In</a>
+    </div>
   </nav>
 
   <!-- Masthead -->
@@ -53,18 +55,18 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\Background.html">
+              <a href="\CENE 476\Sinclair Wash\img\Project Location Map 2.jpg">
               <i class="icon-screen-desktop m-auto text-primary"></i>
               </a>
             </div>
-            <h3>Project Information</h3>
+            <h3>Location</h3>
             <p class="lead mb-0">Maps depicting location of project.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
+              <a href="\CENE 476\Sinclair Wash\img\Project Location Map 2.jpg">
               <i class="icon-layers m-auto text-primary"></i>
             </a>
             </div>
@@ -75,7 +77,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
+              <a href="\CENE 476\Sinclair Wash\img\Project Location Map 2.jpg">
               <i class="icon-check m-auto text-primary"></i>
             </a>
             </div>
