--- a/Background.html
+++ b/Background.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="btn btn-link btn-lg" href="I:\CENE 476\Sinclair Wash\index.HTML">HOME</a>
+      <a class="btn btn-link btn-lg" href="index.HTML">HOME</a>
         <a href="\CENE 476\Sinclair Wash\index.html">
         </a>
     </div>
@@ -53,7 +53,6 @@
   <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Project Location</h2>
@@ -98,7 +97,7 @@
         </div>
         <div class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+            <img class="img-fluid rounded-circle mb-3" src="img/Project Location Map 2.jpg" alt="">
             <h5>Sarah W.</h5>
             <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
           </div>
