--- a/index.html
+++ b/index.html
@@ -46,47 +46,6 @@
     </div>
   </header>
 
-  <!-- Icons Grid -->
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\Background.html">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
-              </a>
-            </div>
-            <h3>Project Information</h3>
-            <p class="lead mb-0">Maps depicting location of project.</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
-              <i class="icon-layers m-auto text-primary"></i>
-            </a>
-            </div>
-            <h3>Constraints</h3>
-            <p class="lead mb-0">Information about constraints of the project.</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <a href="\CENE 476\Sinclair Wash\">
-              <i class="icon-check m-auto text-primary"></i>
-            </a>
-            </div>
-            <h3>Tasks</h3>
-            <p class="lead mb-0">Information about project tasks.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Image Showcases -->
   <section class="showcase">
     <div class="container-fluid p-0">
@@ -115,59 +74,73 @@
     </div>
   </section>
 
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+  <!-- Icons Grid -->
+  <section class="features-icons bg-light text-center">
     <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
         <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-4">
+            <div class="features-icons-icon d-flex">
+              <a href="Background.html">
+              <i class="icon-screen-desktop m-auto text-primary"></i>
+              </a>
+            </div>
+            <h3>Project Information</h3>
+            <p class="lead mb-0">Information pertaining to project.</p>
           </div>
         </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+        <div class="col-lg-8">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <a href="\CENE 476\Sinclair Wash\">
+              <i class="icon-layers m-auto text-primary"></i>
+            </a>
+            </div>
+            <h3>Documents</h3>
+            <p class="lead mb-0">Documents for project.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Call to Action -->
-  <section class="call-to-action text-white text-center">
-    <div class="overlay"></div>
+  <!-- Testimonials -->
+  <section class="testimonials text-center bg-light">
     <div class="container">
+      <h2 class="mb-5">Team</h2>
       <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid square rounded mb-3" src="img/Eric Lima.jpg" alt="">
+            <h5>Eric Lima</h5>
+            <p class="font-weight-medium mb-0">Civil Engineer</p>
+          </div>
         </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid square rounded mb-3" src="img/testimonials-2.jpg" alt="">
+            <h5>Saud Bohasan</h5>
+            <p class="font-weight-medium mb-0">...</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid square rounded mb-3" src="img/testimonials-2.jpg" alt="">
+            <h5>Bolun Yang</h5>
+            <p class="font-weight-medium mb-0">...</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid square rounded mb-3" src="img/testimonials-3.jpg" alt="">
+            <h5>Xiaolei Wang</h5>
+            <p class="font-weight-medium mb-0">...</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer class="footer bg-light">
