--- a/index.html
+++ b/index.html
@@ -60,31 +60,18 @@
       <div class="intro-text">
         <div class="intro-lead-in">Sinclair Wash</div>
         <div class="intro-heading text-uppercase">Restoration Feasibility Study</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">About</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">About</a>
       </div>
     </div>
   </header>
-
-  <!-- Services -->
-  <section class="page-section" id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase"></h2>
-          <h3 class="section-subheading text-muted">The Sinclair Wash Restoration Project will develop a restoration plan for a section of Sinclair Wash. This plan will consist of a construction plan set and a cost estimate to execute the restoration of the section of the wash being analyzed. </h3>
-        </div>
-      </div>
-
-
-
 
   <!-- About -->
   <section class="page-section" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase"></h2>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row">
@@ -92,65 +79,30 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                <img class="square rounded img-fluid" src="img/about/1.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4>Project Summary</h4>
+                  <h4 class="subheading"></h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <p class="text-muted">The Sinclair Wash Restoration Project will develop a restoration plan for a section of Sinclair Wash. This plan will consist of a construction plan set and a cost estimate to execute the restoration of the section of the wash being analyzed.</p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                <img class="square rounded img-fluid" src="img/Mark.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
+                  <h4>Client/Technical Advisor</h4>
+                  <h3 class="subheading">Mark Lamer</h3>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                  <div class="btn btn-primary" href="mailto:mailto:mark.lamer@nau.edu">mark.lamer@nau.edu </div>
                 </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
               </div>
             </li>
           </ul>
@@ -165,7 +117,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">...</h3>
+          <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row">
@@ -173,18 +125,12 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/Eric Lima.jpg" alt="">
             <h4>Eric Lima</h4>
-            <p class="text-muted">Lead Designer</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-envelope"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
+            <p class="text-muted">Senior Engineer, Civil Engineer</p>
+            <ul class="btn btn-dark">
+              <li class="btn btn-dark">
+                <a href="mailto:eal295@nau.edu"> eal295@nau.edu
+              </a>
+             </li>
               <li class="list-inline-item">
                 <a href="https://www.linkedin.com/in/eric-lima-a3011284">
                   <i class="fab fa-linkedin-in"></i>
@@ -197,19 +143,13 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-              <h4>Kay Garland</h4>
-              <p class="text-muted">Lead Designer</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
+              <h4>Saud Bohasan</h4>
+              <p class="text-muted">Engineer II, Civil Engineer</p>
+              <ul class="btn btn-dark">
+                <li class="btn btn-dark">
+                  <a href="mailto:ss2945@nau.edu"> ss2945@nau.edu
+                </a>
+               </li>
                 <li class="list-inline-item">
                   <a href="#">
                     <i class="fab fa-linkedin-in"></i>
@@ -220,20 +160,14 @@
           </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
+            <img class="mx-auto rounded-circle" src="img/Xiaolei.jpg" alt="">
+            <h4>Xiaolei Wang</h4>
+            <p class="text-muted">Engineer I, Civil Engineer</p>
+            <ul class="btn btn-dark">
+              <li class="btn btn-dark">
+                <a href="mailto:xw59@nau.edu"> xw59@nau.edu
+              </a>
+             </li>
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-linkedin-in"></i>
@@ -245,19 +179,13 @@
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-            <h4>Diana Pertersen</h4>
-            <p class="text-muted">Lead Developer</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
+            <h4>Bolun Yang</h4>
+            <p class="text-muted">Engineering Intern</p>
+            <ul class="btn btn-dark">
+              <li class="btn btn-dark">
+                <a href="mailto:by88@nau.edu"> by88@nau.edu
+              </a>
+             </li>
               <li class="list-inline-item">
                 <a href="#">
                   <i class="fab fa-linkedin-in"></i>
@@ -269,7 +197,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted"></p>
         </div>
       </div>
     </div>
