--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/Bolun.jpg" alt="">
             <h4>Bolun Yang</h4>
             <p class="text-muted">Engineering Intern</p>
             <ul class="btn btn-dark">
